# ai-studio

./: .env.example  .gitignore  README.md  gen_report.sh  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml
backend/app/: main.py
backend/app/archive/: __init__.py  cos_archiver.py
backend/app/core/: auth.py  config.py
backend/app/routers/: admin_reports.py  auth.py  channel_monitors.py  images.py  tokens.py
backend/app/webhooks/: __init__.py  notifier.py  router.py  rules.py
backend/deploy/: README.md  request-logs-archiver.service  request-logs-archiver.timer
backend/scripts/: archive_request_logs.py
backend/tests/archive/: test_cos_archiver.py
backend/tests/webhooks/: test_notifier.py  test_router.py  test_rules.py
docs/: DATABASE_SCHEMA.md  JWT_AUTH_API.md  X_API_KEY_AUTH_API.md
src/: App.vue
src/api/: accountLatency.ts  accountUsageTimeline.ts  adminReports.ts  channelMonitors.ts  client.ts  images.ts  scheduledMonitor.ts  tokens.ts  usageLogs.ts  userTrend.ts
src/assets/: styles.css
src/pages/: AccountHealthStatus.vue  AccountLatency.vue  AccountMonitorChart.vue  AccountUsageTimeline.vue  AdminReports.vue  AdminReportsFull.vue  ChannelStatus.vue  ImageStudio.vue  SchedulerPreview.vue  UsageLogs.vue  UserTrend.vue
src/router/: index.ts
